--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -1,6 +1,8 @@
 {
     "title": "تطبيق توقع السعر",
+    "round": "الجولة",
     "wallet": "المحفظة",
+    "prizepool": "الحصيلة",
     "account": "الحساب",
     "balance": "الرصيد",
     "currentRound": "الجولة الحالية",
@@ -12,6 +14,7 @@
     "totalUpBets": "إجمالي رهانات أعلى",
     "totalDownBets": "إجمالي رهانات أسفل",
     "bet": "رهان",
+    "notset": "لم يتم",
     "up": "أعلى",
     "down": "أسفل",
     "endTurn": "إنهاء الجولة",
