local-place a bet

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -24,7 +24,7 @@
     "noWalletDetected": "لم يتم اكتشاف المحفظة",
     "enterBetAmount": "(BNB) دخل مبلغ رهانك",
     "pendingWithdrawal": "السحب المعلق",
-    "placeBet": "وضع توقع",
+    "placeBet": "وضع",
     "yourPrediction": "توقعك",
     "on": "على",
     "amount": "المبلغ",
