--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -24,7 +24,7 @@
     "noWalletDetected": "No Wallet Detected",
     "enterBetAmount": "Enter your bet amount (BNB)",
     "pendingWithdrawal": "Pending Withdrawal",
-    "placeBet": "Place a bet of",
+    "placeBet": "Bet",
     "yourPrediction": "Your prediction",
     "amount": "Amount",
     "placePrediction": "Place a Prediction",
