--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -24,7 +24,7 @@
     "noWalletDetected": "Aucun Portefeuille Détecté",
     "enterBetAmount": "Entrez le montant de votre pari (ETH)",
     "pendingWithdrawal": "Retrait en Attente",
-    "placeBet": "Placer un pari de",
+    "placeBet": "Miser",
     "placePrediction": "Placer une Prédiction",
     "yourPrediction": "Votre prédiction",
     "amount": "Montant",
